--- a/Obligatorio2023Prog2/Site.Master
+++ b/Obligatorio2023Prog2/Site.Master
@@ -47,9 +47,12 @@
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Vehiculos">Vehiculos</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkHome" runat="server" href="~/">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkAbout" runat="server" href="~/About">Acerca de</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkVehiculos" runat="server" href="~/Vehiculos">Vehiculos</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkVentas" runat="server" href="~/Ventas">Ventas</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkAlquileres" runat="server" href="~/Alquileres">Alquileres</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkUsuarios" runat="server" href="~/Usuarios">Usuarios</a></li>
                     </ul>
                 </div>
             </div>
