--- a/Obligatorio2023Prog2/Site.Master
+++ b/Obligatorio2023Prog2/Site.Master
@@ -2,12 +2,11 @@
 
 <!DOCTYPE html>
 
-<html lang="es">
+<html lang="en">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Mi aplicación ASP.NET</title>
+    <title><%: Page.Title %> - Obligatorio P II</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -40,19 +39,13 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" id="lnkHome" runat="server" href="~/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" id="lnkAbout" runat="server" href="~/About">Acerca de</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkClientes" runat="server" href="~/Clientes">Clientes</a></li>
                         <li class="nav-item"><a class="nav-link" id="lnkVehiculos" runat="server" href="~/Vehiculos">Vehiculos</a></li>
                         <li class="nav-item"><a class="nav-link" id="lnkVentas" runat="server" href="~/Ventas">Ventas</a></li>
-                        <li class="nav-item"><a class="nav-link" id="lnkAlquileres" runat="server" href="~/Alquileres">Alquileres</a></li>
-                        <li class="nav-item"><a class="nav-link" id="lnkUsuarios" runat="server" href="~/Usuarios">Usuarios</a></li>
+                         <li class="nav-item"><a class="nav-link" id="lnkAlquileres" runat="server" href="~/Alquileres">Alquileres</a></li>
+                         <li class="nav-item"><a class="nav-link" id="lnkUsuarios" runat="server" href="~/Usuarios">Usuarios</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,7 +55,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
             </footer>
         </div>
     </form>
