--- a/Obligatorio2023Prog2/Site.Master
+++ b/Obligatorio2023Prog2/Site.Master
@@ -47,6 +47,7 @@
                         <li class="nav-item"><a class="nav-link" id="lnkVentas" runat="server" href="~/Ventas">Ventas</a></li>
                          <li class="nav-item"><a class="nav-link" id="lnkAlquileres" runat="server" href="~/Alquileres">Alquileres</a></li>
                          <li class="nav-item"><a class="nav-link" id="lnkUsuarios" runat="server" href="~/Usuarios">Usuarios</a></li>
+                        <li class="nav-item"><a class="nav-link" id="lnkSalir" runat="server" href="~/Login">Salir</a></li>
                     </ul>
                 </div>
             </div>
